--- a/assets/css/apps/mail/pages/MailIndex.css
+++ b/assets/css/apps/mail/pages/MailIndex.css
@@ -1,52 +1,9 @@
 /* mail index  */
 
 @import '../cmps/mail-preview.css';
+@import '../cmps/MailFolderList.css';
 
-/* Styling the filter buttons section */
-.filter-buttons {
-  flex-basis: 20%;
+.mail-index-container {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 1rem;
-  background-color: #f5f5f5;
-}
-
-.filter-buttons button {
   width: 100%;
-  padding: 1rem;
-  margin-bottom: 1rem;
-  border: none;
-  background-color: #007bff;
-  color: white;
-  font-size: 1rem;
-  cursor: pointer;
-  border-radius: 6px; /* מעגל פינות */
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15); /* הוספת צל */
-  transition: background-color 0.3s ease, box-shadow 0.3s ease; /* הוספת אנימציה */
-}
-
-.filter-buttons button:hover {
-  background-color: #0056b3;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* צל גדול יותר במצב ריחוף */
-}
-
-.filter-buttons button:focus,
-.filter-buttons button.active {
-  /* מצב פעיל או לחוץ */
-  outline: none;
-  background-color: #003366;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* צל עוד יותר גדול */
-}
-
-.filter-buttons button.active {
-  background-color: #0056b3; /* רקע אחר לכפתור פעיל */
-}
-
-/* Styling the mail table section */
-.mail-table {
-  flex-basis: 80%;
-  padding: 1rem;
-  overflow-y: auto;
-  background-color: #fff;
 }
